force-app/main/default/objects/MarketingParamsTable__c/MarketingParamsTable__c.object-meta.xml
<CustomObject>
    <label>Marketing Params Table</label>
    <nameField>
        <label>Marketing Params Table</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Params Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>