force-app/main/default/objects/MarketingParamsTable__c/fields/AfterPurchasService__c.field-meta.xml
<CustomField>
    <fullName>AfterPurchasService__c</fullName>
    <label>AfterPurchasService</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>