force-app/main/default/objects/MarketingParamsTable__c/fields/Business_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Business_Type_Formula__c</fullName>
    <formula>CASE(BusinessType__c,
&apos;Non-distributor&apos;, DATE(2024, 1, 1),
&apos;Distributor&apos;, DATE(2024, 2, 1),
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Type Formula</label>
    <type>Date</type>
</CustomField>