force-app/main/default/objects/MarketingParamsTable__c/fields/Chem_content_Mech_features__c.field-meta.xml
<CustomField>
    <fullName>Chem_content_Mech_features__c</fullName>
    <label>Chem. content / Mech. features</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>