force-app/main/default/objects/MarketingParamsTable__c/fields/CompetencyKnowledge__c.field-meta.xml
<CustomField>
    <fullName>CompetencyKnowledge__c</fullName>
    <label>Competency/Knowledge</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>