force-app/main/default/objects/MarketingParamsTable__c/fields/ComplianceSupplyTime__c.field-meta.xml
<CustomField>
    <fullName>ComplianceSupplyTime__c</fullName>
    <label>ComplianceSupplyTime</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>