force-app/main/default/objects/MarketingParamsTable__c/fields/ContactsAmount__c.field-meta.xml
<CustomField>
    <fullName>ContactsAmount__c</fullName>
    <label>ContactsAmount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>