force-app/main/default/objects/MarketingParamsTable__c/fields/DelivQuality__c.field-meta.xml
<CustomField>
    <fullName>DelivQuality__c</fullName>
    <label>DelivQuality</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>