force-app/main/default/objects/MarketingParamsTable__c/fields/DocsProvided__c.field-meta.xml
<CustomField>
    <fullName>DocsProvided__c</fullName>
    <label>DocsProvided</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>