force-app/main/default/objects/MarketingParamsTable__c/fields/GeometricParameters__c.field-meta.xml
<CustomField>
    <fullName>GeometricParameters__c</fullName>
    <label>Geometric Parameters</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>