force-app/main/default/objects/MarketingParamsTable__c/fields/Market_Segment_F__c.field-meta.xml
<CustomField>
    <fullName>Market_Segment_F__c</fullName>
    <formula>CASE(MarketSegment__c,
&apos;00011&apos;, DATE(2024, 1, 1),
&apos;00004&apos;, DATE(2024, 2, 1),
&apos;00002&apos;, DATE(2024, 3, 1),
&apos;00001&apos;, DATE(2024, 4, 1),
&apos;00010&apos;, DATE(2024, 5, 1),
&apos;00006&apos;, DATE(2024, 6, 1),
&apos;00100&apos;, DATE(2024, 7, 1),
&apos;00005&apos;, DATE(2024, 8, 1),
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Segment Formula</label>
    <type>Date</type>
</CustomField>