force-app/main/default/objects/MarketingParamsTable__c/fields/MarkingQuality__c.field-meta.xml
<CustomField>
    <fullName>MarkingQuality__c</fullName>
    <label>Marking Quality</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>