force-app/main/default/objects/MarketingParamsTable__c/fields/Packaging__c.field-meta.xml
<CustomField>
    <fullName>Packaging__c</fullName>
    <label>Packaging</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>