force-app/main/default/objects/MarketingParamsTable__c/fields/ProductsValue__c.field-meta.xml
<CustomField>
    <fullName>ProductsValue__c</fullName>
    <label>ProductsValue</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>