force-app/main/default/objects/MarketingParamsTable__c/fields/QualityFeedback__c.field-meta.xml
<CustomField>
    <fullName>QualityFeedback__c</fullName>
    <label>QualityFeedback</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>