force-app/main/default/objects/MarketingParamsTable__c/fields/SpeedResponse__c.field-meta.xml
<CustomField>
    <fullName>SpeedResponse__c</fullName>
    <label>SpeedResponse</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>