force-app/main/default/objects/MarketingParamsTable__c/fields/SurfaceQuality__c.field-meta.xml
<CustomField>
    <fullName>SurfaceQuality__c</fullName>
    <label>Surface Quality</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>