force-app/main/default/objects/MarketingParamsTable__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ExtID__c</columns>
    <columns>Year__c</columns>
    <columns>MarketSegment__c</columns>
    <columns>BusinessType__c</columns>
    <columns>NPS__c</columns>
    <columns>GeometricParameters__c</columns>
    <columns>SurfaceQuality__c</columns>
    <columns>Chem_content_Mech_features__c</columns>
    <columns>Packaging__c</columns>
    <columns>MarkingQuality__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>